--- a/h_django/product_project/templates/nvbar.html
+++ b/h_django/product_project/templates/nvbar.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li><a href="{%url 'index'%}">HOME</a></li>
-        <li><a href="#">상품정보조회</a></li>
-        <li><a href="#">상품등록</a></li>
+        <li><a href="{%url 'product_list'%}">상품정보조회</a></li>
+        <li><a href="{%url 'product_insert'%}">상품등록</a></li>
     </ul>
 </nav>
