--- a/h_django/book_project_lec/book_app/templates/book_app/book_list.html
+++ b/h_django/book_project_lec/book_app/templates/book_app/book_list.html
@@ -22,11 +22,10 @@
         <td>{{book.bookprice}}</td>
         <td>{{book.bookdate}}</td>
         <td>{{book.bookstock}}</td>
-        <td>{{book.pubno}}</td>
-	<td></td>
-        <td><a href="">
+        <td>{{book.pubno.pubname}}</td>  <!-- 이렇게 외래키 연결해서 값을 불러오기 가능 -->
+        <td><a href="{%url 'book_update' book.bookno%}">
             <button class='btn'>수정</button></a></td>
-        <td><a href="" 
+        <td><a href="{%url 'book_delete' book.bookno%}" 
                 onclick="return confirm('삭제하시겠습니까?')">
             <button class='btn'>삭제</button></a></td>
     </tr>
